# LODTwSAT

./: .gitignore  LICENSE  README.md  pyproject.toml
exp/: random_sampling.py
scripts/: __init__.py
scripts/data/: pmlb.py
scripts/experiments/: comparison.py  sampling_study.py
scripts/training/: dt1.py  sklearn_dt.py
src/dt1/: __init__.py  builder.py  classifier.py  exceptions.py  tree.py  types.py
src/scripts/: README.md  table.py
src/scripts/data/: __init__.py  pmlb.py  preprocessing.py
src/scripts/experiments/: __init__.py  comparison.py  sampling_study.py
src/scripts/training/: __init__.py  dt1.py  sklearn_dt.py
tests/: conftest.py  test_decision_tree.py  test_dt1_classifier.py
