[project]
name = "lodtwsat"
version = "0.1.0"
description = "Reproduction of experiments in Learning Optimal Decision Trees with SAT by Narodytska et al."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "nnf>=0.4.1",
  "numpy>=2.4.0",
  "python-sat>=1.8.dev26",
  "scikit-learn>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "dt1"

[dependency-groups]
dev = ["pmlb>=1.0.1.post3", "pytest>=9.0.2"]
